android file config

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_barcode_scanner: ^2.0.0
   google_fonts: ^3.0.1
-  flutter_swiper: ^1.1.6
+  flutter_swiper_view: ^1.1.8
   pinput: ^2.2.12
 
 dev_dependencies:
