survey display and creation methode is completed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
      - asset/scan.png 
      - asset/ok.png
      - asset/cancel.png
+     - asset/book.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
